# deepsort-vehicle-tracker

./: .gitignore  README.md  config.py  deepsort.py  detect_utils.py  detector_demo.py  pyproject.toml  tracker.py  tracker_demo.py
detector/: config.py  dataset.py  detect_utils.py  train.py
siamese_network/: config.py  dataset.py  models.py  siamese_net.py  siamese_test.py  siamese_train.py  train.py  utils.py
tests/: test_vehicle_tracker.py
