[tool.poetry]
name = "vehicle-tracker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
torch = "^1.10.1"
torchvision = "^0.11.2"
opencv-python = "^4.5.5"
scipy = "^1.7.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
