[tool.poetry]
name = "deepsort-vehicle-tracker"
version = "0.1.0"
description = "Vehicle tracking using DeepSORT + PyTorch"
authors = ["Mücteba Özcan <mmozcan4@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
torch = "^1.10.1"
torchvision = "^0.11.2"
opencv-python = "^4.5.5"
scipy = "^1.7.3"
natsort = "^8.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
